src/Styles/LandingPage.css
/* ... */
.why-card-container > .card-3{
  background-image: url('../assets/whychoose/wc-b3.png');
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.why-card-container > .card-4{
  background-image: url('../assets/whychoose/wc-b4.png');
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}
.why-card-text{
  padding: 1rem;
}

.why-card-text > p{
  color: #A7B2CF;
}

.why-card-heading{
  display: flex;
  align-items: center;
  padding-bottom: 1rem;
  }

.why-icon{
  vertical-align: middle;
}
.why-card-heading > h4{
  margin-left: 1rem;
  vertical-align: middle;
  font-weight: 200;
  
}



.why-img > img{
  width: 90%;
}

.why-card-text{
  position: relative;
  z-index: 1;
  text-align: left;
}



.why-card{
  display: flex;
  flex-direction: column;
  width: 40%;
  align-items: center;
  border-radius: 11px;
  overflow: hidden;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat; 
}



/* Gradient Effects for Why Choose */
.img-1::before {
  content: "";
  position: absolute;
  top: 0;
  left: 5%;
  width: 90%;
  height: 100%;
  background: linear-gradient(
    to bottom right,
    rgba(24, 52, 233, 0.6) 0%,
    rgba(24, 52, 233, 0.4) 10%,
    rgba(24, 52, 233, 0.2) 25%,
    rgba(24, 52, 233, 0.05) 45%,
    rgba(24, 52, 233, 0) 65%
  );
  z-index: 0;
  border-radius: 11px;
}


.img-2::before {
  content: "";
  position: absolute;
  top: 0;
  left: 5%;
  width: 90%;
  height: 100%;
  z-index: 0;
  border-radius: 11px;
  background:linear-gradient( to bottom, rgba(24, 52, 233, 0.4) 0%, rgba(24, 52, 233, 0.1) 40%, rgba(24, 52, 233, 0.1) 60%, rgba(24, 52, 233, 0) 100% );
}


.img-3::before {
  content: "";
  position: absolute;
  top: 0;
  left: 5%;
  width: 90%;
  height: 100%;
  z-index: 0;
  border-radius: 11px;
  background: radial-gradient(
      circle at top left,
      rgba(24, 52, 233, 0.5) 0%,
      rgba(24, 52, 233, 0) 30%
    ),
    radial-gradient(
      circle at top right,
      rgba(24, 52, 233, 0.5) 0%,
      rgba(24, 52, 233, 0) 30%
    );
}


.img-4::before {
  content: "";
  position: absolute;
  top: 0;
  left: 5%;
  width: 90%;
  height: 100%;
  z-index: 0;
  border-radius: 11px;
  background: linear-gradient(
    to bottom right,
    rgba(24, 52, 233, 0.5) 0%,
    rgba(24, 52, 233, 0.1) 40%,
    rgba(24, 52, 233, 0) 80%
  );
}

.why-img{
  display: flex;
  justify-content: center;
  position: relative;
} 


/* Choose Solution */


.solution-wrapper{
  width: 90%;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  margin-top: 3rem;
}

.solution-wrapper > h1{
  padding: 1rem 0;
  font-size: 60px;
  font-weight: 600;
  background: linear-gradient(90deg, #909DC1 40%, #3663DE);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text; 
  color: transparent;
}

.solution-wrapper > p {
  color: #A7B2CF;
}

.solution-card-container{
  display: flex;
  gap:1.5rem;
  text-align: left;
  justify-content: space-between;
  margin: 3rem 0;
}

.solution-img{
  display: flex;
  justify-content: center;
  border-radius: 11px 11px 0 0;
  position: relative;
  overflow: hidden;
}

.solution-card{
  border-radius: 11px 11px 0 0;
  background-color: #1E1E1E;
  border-radius: 11px;
  position: relative;
}
.solution-card-1{
  width: 43%
}

.solution-card-2{
  width: 54%;
  z-index: 9;
}
.solution1 > img{
  width: 60%;
}

.solution1{
  background-color: #1C2022;
}
.solution2{
  background-color: #151515;
}

.solution2 >img{
  width: 58%;
}


.solution-card-text{
  padding: 1rem;
}

.card-footer{
  display: flex;
  align-items: center;
  padding: 1rem 0;
  border-radius: 11px;

}

.card-footer-text{
  width: 60%;
  padding-right: 1rem;
  border-right: 1px solid #4f4f4f;
}


.card-footer-text > p , .card-footer-text > p >b{
  color: #909DC1;
  line-height: 1.5;
}

.card-footer-btn{
  display: flex;
  justify-content: center;
  width: 40%;
}

.card-footer-btn > label{
    background-color: #2029C8;
    border :1px solid #4F4F4F;
    border-radius: 60px;
    padding: .5rem 1rem;
}


/* In image glowing effect */

.radial-glow {
  position: absolute;
  width: 400px;
  height: 200px;
  bottom: 0;
  left: 50%;
  transform: translateX(-50%) translateY(11%);
  border-radius:50%;
  z-index: 0;
  background: radial-gradient(circle, rgba(47, 37, 108, 0.7) 0%, rgba(0,0,0,0) 70%);
  pointer-events: none;
  filter: blur(20px);
  mix-blend-mode: plus-lighter;
}


.outer-radial-effect-left{
  position: absolute;
  width: 30vw;
  height: 20vw;
  background:radial-gradient(circle, rgb(47, 37, 108) 0%, rgba(0,0,0,0) 70%);
  pointer-events: none;
  transform: translate(-10vw,5vw);
}

.outer-radial-effect-right{
  position: absolute;
  width: 30vw;
  height: 20vw;
  background:radial-gradient(circle, rgba(47, 37, 108, 0.7) 63%, rgba(0,0,0,0) 70%);
  pointer-events: none;
  transform: translate(65vw,3vw);
  filter: blur(45px);

}

.solution-card-text > h4{
  font-size: 20px;
  font-weight: 400;
}
/* ... */

